<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WifiLocator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="loading">Loading . . .</string>
    <string name="location">Location</string>
    <string name="place">place</string>
    <string name="add">Add</string>
    <string name="rescan">rescan</string>
    <string name="back">Back</string>
    <string name="quit">Quit</string>
    <string name="ssid">SSID:..</string>
    <string name="rate">rate</string>
    <string name="lineseparator">____________________________________________________________________________________________________________________________________</string>
    <string name="todo">TODO</string>
    <string name="online_tab_text">This Tab for online services management</string>
    <string name="add_location">add here</string>
    <string name="remove_location">remove</string>
    <string name="place_name">Add your current place name here!</string>
    <string name="edit_location">edit</string>
    <string name="enter_place">Enter place for this signal here</string>
    <string name="location_icon">location_icon</string>
    <string name="rename">Rename</string>
    <string name="_delete_">" Delete  "</string>
    <string name="Cross">+</string>
    <string-array name="device_states">
        <item>Normal</item>
        <item>Silence</item>
        <item>Discreet</item>
        <item>Air plante mode</item>
    </string-array>

</resources>