<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ccccdc">

    <TextView
        android:id="@+id/tv_SSID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#333356"
        android:text="@string/ssid" />

    <EditText
        android:id="@+id/ed_edit_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_place"
        android:textSize="17sp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickAdd"
            android:text="@string/add" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClickBack"
            android:layout_weight="1"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>