<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

	    <TextView
	        android:id="@+id/location_name"
	        android:layout_width="match_parent"
	        android:layout_height="80dp"
	        android:layout_alignBottom="@+id/button1"
	        android:layout_toLeftOf="@+id/button1"
	        android:background="#003040"
	        android:ellipsize="start"
	        android:ems="30"
	        android:gravity="center"
	        android:hint="@string/location"
	        android:singleLine="true"
	        android:textColor="#f8f2ff"
	        android:textSize="20sp" >
			
	        <requestFocus />
	    </TextView>

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="60dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="4dp"
	        android:textSize="36sp"
	        android:text="@string/Cross"
	        android:onClick="onClickCross" />

	</RelativeLayout>
	
    
    <ListView
        android:id="@+id/listview_location"
        android:layout_width="fill_parent"
        android:background="#cccccc"
        android:layout_height="0dp"
        android:layout_weight="0.30" />
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
		
         <Button
            android:id="@+id/edit_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickEdit"
            android:text="@string/edit_location" />
         
        <Button
            android:id="@+id/location_back"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="onClickBack"
            android:text="@string/back" />

        
        </LinearLayout>
   
</LinearLayout>