<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/location_edit_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#f0d060"
        android:contentDescription="@string/location_icon"
        android:src="@drawable/fi_scan" />

    <TextView
        android:id="@+id/location_name_edit_shower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/location_edit_icon"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#f0d060"
        android:textColor="#000000"
        android:layout_toRightOf="@+id/location_edit_icon"
        android:textSize="25sp"
        android:text="@string/location" />

    <Button
        android:id="@+id/delete_location"
        android:textSize="18sp"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/location_name_edit_shower"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="#f03030"
        android:text="@string/_delete_" />

</RelativeLayout>